--- a/Flip Color/style.css
+++ b/Flip Color/style.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
 * {
   padding: 0;
@@ -78,10 +76,12 @@ button {
   border-radius: 4px;
   border: 1px solid blueviolet;
   cursor: pointer;
-  transition: background-color 0.2s, color 0.2s, border 0.2s;
+  transition: all .3s;
 }
 
 button:hover {
   background-color: gray;
   color: #eee;
+  padding: 4px 24px;
+  border-color: gray;
 }
